//it's lazy updated file, so the real ChangeLog is the activity on github

62.1.2

* Spellchecker fix

62.1.1
* PDF fix

62.1.0
+ new version of pugixml XML parser
* cmake support is rewritten a lot.


* 62.0.1 quick fix
+ Edit - Select all

* Qt6 copy text with new lines - fixed
* Markdown functions - fixes 

+ View - Preview Markdown //Qt 5.14+ 

+ QT6 only: Functions - Math - Subtitles: shift timecode by msecs 
            put msecs to FIF. msecs can be negative, i.e "-2000" shifts timecodes by 2000 msecs earlier
            //works also for Youtube subs

+ Options - Interface - Show tabs and spaces
* find in files FIX
* TEA theme FIX

- Individual ODT/SXW reader class, the functionality moved to common zipped XML reader
+ Tune - Functions - Misc - Show ebooks fine (adds spaces before each paragraph)
* old bookmarks file automatically converts to new format
* bookmarks and recent files has a new format (with a separator *)
* recent files list will be updated to new format on use, so the old records
will be lost

* xml parser changed to pugixml

+ FB2.ZIP, FBZ support
* single application mode fixes

+ FB2 support improvements
+ poppler-qt6 support with cmake
* DJVU support with cmake - fixed

+ autosave
* braces hl megafix

* cmake + hunspell detection fix
+ Polish UI and Manual translation by Krzysztof Jaśkiewicz
+ Rust hl support
+ The time consuming operations such as "Find in files" can be interrupted.

* Dates panel upd
+ SRT hightlighting
+ Basic Haskell hightlighting
* Good old bug with syntax hl engine (related to partial hl module file) is fixed
+ Youtube subtitles highlighting support
+ Fn - Case - Capitalize sentences

+ qt 4.x compat again

* Spellcheker module rewrite

+ lua is added for script intepritators (Fn - Script)
+ Fn::Script: bat, btm scripts support (Win)
+ Fn::Script: cmd //REXX  

* old format for keywords (in syntax hl files) with ";" as the delimeter is dropped, use current one (regexp) instead if you write own hl files