@@ -78,7 +78,6 @@ tea_headers_moc = [
     'logmemo.h',
     'img_viewer.h',
     'tio.h',
-    'tzipper.h',
     'single_application_shared.h',
     'myjoystick.h',
     'pugixml.hpp',
@@ -108,19 +107,9 @@ tea_source = ['tea.cpp',
     'logmemo.cpp',
     'img_viewer.cpp',
     'tio.cpp',
-    'tzipper.cpp',
     'single_application_shared.cpp',
     'exif_reader.cpp',
     'myjoystick.cpp',
-    'qioapi.cpp',
-    'quagzipfile.cpp',
-    'quaziodevice.cpp',
-    'quazip.cpp',
-    'quazipdir.cpp',
-    'quazipfile.cpp',
-    'quazipfileinfo.cpp',
-    'quazipnewinfo.cpp',
-    'unzip.c',
     'zip.c',
     'pugixml.cpp']
 
