@@ -292,45 +292,6 @@ UTF16TEXT koi8r_to_utf16[256] = {
     0x042C, 0x042B, 0x0417, 0x0428, 0x042D, 0x0429, 0x0427, 0x042A  // Символы диапазона 0xF8-0xFF
 };
 
-//ushort
-UTF16TEXT utf16_to_koi8r[65536] = {
-    // Для символов в диапазоне от 0x0000 до 0x007F используем ASCII
-    // Остальные символы будут преобразованы в соответствующие символы KOI8-R
-    // Таблица заполнена вручную и может быть дополнена при необходимости
-    // Для некоторых символов нет прямого эквивалента в KOI8-R, поэтому используется пустой символ (0x0000)
-    0x0020, 0x0021, 0x0022, 0x0023, 0x0024, 0x0025, 0x0026, 0x0027, // Символы  !"#$%&'
-    0x0028, 0x0029, 0x002A, 0x002B, 0x002C, 0x002D, 0x002E, 0x002F, // Символы ()*+,-./
-    0x0030, 0x0031, 0x0032, 0x0033, 0x0034, 0x0035, 0x0036, 0x0037, // Символы 01234567
-    0x0038, 0x0039, 0x003A, 0x003B, 0x003C, 0x003D, 0x003E, 0x003F, // Символы 89:;<=>?
-    0x0040, 0x0041, 0x0042, 0x0043, 0x0044, 0x0045, 0x0046, 0x0047, // Символы @ABCDEFG
-    0x0048, 0x0049, 0x004A, 0x004B, 0x004C, 0x004D, 0x004E, 0x004F, // Символы HIJKLMNO
-    0x0050, 0x0051, 0x0052, 0x0053, 0x0054, 0x0055, 0x0056, 0x0057, // Символы PQRSTUVW
-    0x0058, 0x0059, 0x005A, 0x005B, 0x005C, 0x005D, 0x005E, 0x005F, // Символы XYZ[\]^_
-    0x0060, 0x0061, 0x0062, 0x0063, 0x0064, 0x0065, 0x0066, 0x0067, // Символы `abcdefg
-    0x0068, 0x0069, 0x006A, 0x006B, 0x006C, 0x006D, 0x006E, 0x006F, // Символы hijklmno
-    0x0070, 0x0071, 0x0072, 0x0073, 0x0074, 0x0075, 0x0076, 0x0077, // Символы pqrstuvw
-    0x0078, 0x0079, 0x007A, 0x007B, 0x007C, 0x007D, 0x007E, 0x007F, // Символы xyz{|}~
-    // Символы в диапазоне от 0x0080 до 0x00FF будут преобразованы в соответствующие символы KOI8-R
-    // Для некоторых символов нет прямого эквивалента в KOI8-R, поэтому используется пустой символ (0x0000)
-    0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, // Символы диапазона 0x0080-0x0087
-    0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, // Символы диапазона 0x0088-0x008F
-    0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, // Символы диапазона 0x0090-0x0097
-    0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, 0x0000, // Символы диапазона 0x0098-0x009F
-    0x2500, 0x2502, 0x250C, 0x2510, 0x2514, 0x2518, 0x251C, 0x2524, // Символы диапазона 0x00A0-0x00A7
-    0x252C, 0x2534, 0x253C, 0x2580, 0x2584, 0x2588, 0x258C, 0x2590, // Символы диапазона 0x00A8-0x00AF
-    0x2591, 0x2592, 0x2593, 0x2320, 0x25A0, 0x2219, 0x221A, 0x2248, // Символы диапазона 0x00B0-0x00B7
-    0x2264, 0x2265, 0x00A0, 0x2321, 0x00B0, 0x00B2, 0x00B7, 0x00F7, // Символы диапазона 0x00B8-0x00BF
-    0x2550, 0x2551, 0x2552, 0x0451, 0x2553, 0x2554, 0x2555, 0x2556, // Символы диапазона 0x00C0-0x00C7
-    0x2557, 0x2558, 0x2559, 0x255A, 0x255B, 0x255C, 0x255D, 0x255E, // Символы диапазона 0x00C8-0x00CF
-    0x255F, 0x2560, 0x2561, 0x0401, 0x2562, 0x2563, 0x2564, 0x2565, // Символы диапазона 0x00D0-0x00D7
-    0x2566, 0x2567, 0x2568, 0x2569, 0x256A, 0x256B, 0x256C, 0x00A9, // Символы диапазона 0x00D8-0x00DF
-    0x044E, 0x0410, 0x0411, 0x0426, 0x0414, 0x0415, 0x0424, 0x0413, // Символы диапазона 0x00E0-0x00E7
-    0x0425, 0x0418, 0x0419, 0x041A, 0x041B, 0x041C, 0x041D, 0x041E, // Символы диапазона 0x00E8-0x00EF
-    0x041F, 0x042F, 0x0420, 0x0421, 0x0422, 0x0423, 0x0416, 0x0412, // Символы диапазона 0x00F0-0x00F7
-    0x042C, 0x042B, 0x0417, 0x0428, 0x042D, 0x0429, 0x0427, 0x042A  // Символы диапазона 0x00F8-0x00FF
-};
-
-
 
 //ok
 UTF16TEXT* CTextConverter::ConvertFromCP1251ToUTF16(const char* cp1251Text)
@@ -404,7 +365,7 @@ char* CTextConverter::ConvertFromUTF16ToDOS866(const UTF16TEXT* utf16Text) {
 }
 
 
-//NOT TESTED
+//OK
 UTF16TEXT* CTextConverter::ConvertFromKOI8RToUTF16(const char* koi8rText) {
     size_t len = strlen(koi8rText);
     UTF16TEXT* utf16Text = new UTF16TEXT[len + 1]; // Учитываем нулевой символ
@@ -417,30 +378,242 @@ UTF16TEXT* CTextConverter::ConvertFromKOI8RToUTF16(const char* koi8rText) {
     return utf16Text;
 }
 
-//NOT TESTED
-char* CTextConverter::ConvertFromUTF16ToKOI8R(const UTF16TEXT* utf16Text) {
-    size_t len = 0;
-    const UTF16TEXT* p = utf16Text;
-    while (*p++) {
-        ++len;
+
+
+std::map<UTF16TEXT, char> unicode_to_koi8r = {
+    // Кириллица
+    {0x2500, 0x80},
+    {0x2502, 0x81},
+    {0x250C, 0x82},
+    {0x2510, 0x83},
+    {0x2514, 0x84},
+    {0x2518, 0x85},
+    {0x251C, 0x86},
+    {0x2524, 0x87},
+    {0x252C, 0x88},
+    {0x2534, 0x89},
+    {0x253C, 0x8A},
+    {0x2580, 0x8B},
+    {0x2584, 0x8C},
+    {0x2588, 0x8D},
+    {0x258C, 0x8E},
+    {0x2590, 0x8F},
+
+    //второй ряд
+   {0x2591, 0x90},
+   {0x2592, 0x91},
+   {0x2593, 0x92},
+   {0x2320, 0x93},
+   {0x25A0, 0x94},
+   {0x2219, 0x95},
+   {0x221A, 0x96},
+   {0x2248, 0x97},
+   {0x2264, 0x98},
+   {0x2265, 0x99},
+   {0xA0, 0x9A},
+   {0x2321, 0x9B},
+   {0xB0, 0x9C},
+   {0xB2, 0x9D},
+   {0xB7, 0x9E},
+   {0xF7, 0x9F},
+
+
+
+   //третий ряд
+
+   {0x2550, 0xA0},
+   {0x2551, 0xA1},
+   {0x2552, 0xA2},
+   {0x451, 0xA3},
+   {0x2553, 0xA4},
+   {0x2554, 0xA5},
+   {0x2555, 0xA6},
+   {0x2556, 0xA7},
+   {0x2557, 0xA8},
+   {0x2558, 0xA9},
+   {0x2559, 0xAA},
+   {0x255A, 0xAB},
+   {0x255B, 0xAC},
+   {0x255C, 0xAD},
+   {0x255D, 0xAE},
+   {0x255E, 0xAF},
+
+
+   //четвертый ряд
+
+
+   {0x255F, 0xB0},
+   {0x2560, 0xB1},
+   {0x2561, 0xB2},
+   {0x401, 0xB3},
+   {0x2562, 0xB4},
+   {0x2563, 0xB5},
+   {0x2564, 0xB6},
+   {0x2565, 0xB7},
+   {0x2566, 0xB8},
+   {0x2567, 0xB9},
+   {0x2568, 0xBA},
+   {0x2569, 0xBB},
+   {0x256A, 0xBC},
+   {0x256B, 0xBD},
+   {0x256C, 0xBE},
+   {0x25A9, 0xBF},
+
+//пятый ряд
+
+
+   {0x44E, 0xC0},
+   {0x430, 0xC1},
+   {0x431, 0xC2},
+   {0x446, 0xC3},
+   {0x434, 0xC4},
+   {0x435, 0xC5},
+   {0x444, 0xC6},
+   {0x433, 0xC7},
+   {0x445, 0xC8},
+   {0x438, 0xC9},
+   {0x439, 0xCA},
+   {0x43A, 0xCB},
+   {0x43B, 0xCC},
+   {0x43C, 0xCD},
+   {0x43D, 0xCE},
+   {0x43E, 0xCF},
+
+//шестой ряд
+
+
+   {0x43F, 0xD0},
+   {0x44F, 0xD1},
+   {0x440, 0xD2},
+   {0x441, 0xD3},
+   {0x442, 0xD4},
+   {0x443, 0xD5},
+   {0x436, 0xD6},
+   {0x432, 0xD7},
+   {0x44C, 0xD8},
+   {0x44B, 0xD9},
+   {0x437, 0xDA},
+   {0x448, 0xDB},
+   {0x44D, 0xDC},
+   {0x449, 0xDD},
+   {0x447, 0xDE},
+   {0x44A, 0xDF},
+
+//седьмой ряд
+
+   {0x42E, 0xE0},
+   {0x410, 0xE1},
+   {0x411, 0xE2},
+   {0x426, 0xE3},
+   {0x414, 0xE4},
+   {0x415, 0xE5},
+   {0x424, 0xE6},
+   {0x413, 0xE7},
+   {0x425, 0xE8},
+   {0x418, 0xE9},
+   {0x419, 0xEA},
+   {0x41A, 0xEB},
+   {0x41B, 0xEC},
+   {0x41C, 0xED},
+   {0x41D, 0xEE},
+   {0x41E, 0xEF},
+
+//восьмой ряд
+
+   {0x41F, 0xF0},
+   {0x42F, 0xF1},
+   {0x420, 0xF2},
+   {0x421, 0xF3},
+   {0x422, 0xF4},
+   {0x423, 0xF5},
+   {0x416, 0xF6},
+   {0x412, 0xF7},
+   {0x42C, 0xF8},
+   {0x42B, 0xF9},
+   {0x417, 0xFA},
+   {0x428, 0xFB},
+   {0x42D, 0xFC},
+   {0x429, 0xFD},
+   {0x427, 0xFE},
+   {0x42A, 0xEF},
+
+};
+
+//ок
+char* CTextConverter::ConvertFromUTF16ToKOI8R(const UTF16TEXT* utf16Text)
+{
+  size_t len = 0;
+  const UTF16TEXT* p = utf16Text;
+
+  while (*p++)
+        {
+         ++len;
+        }
+
+  //char* KOIText = new char[len + 1]; // Учитываем нулевой символ
+
+  std::string s;
+
+  for (int i = 0; i < len; i++)
+      {
+       UTF16TEXT uc = utf16Text[i];
+       char c;
+
+     //  if (uc <= 0x7F)
+        if (uc <= 0x80)
+
+          c = (char) uc;
+       else
+           c = unicode_to_koi8r [uc];
+
+       s += c;
+
+      }
+
+  //char *result = new char[s.length() + 1];
+  char *result = new char[s.length() + 1];
+
+
+  std::strncpy (result, s.c_str(), s.size());
+
+  result[len] = '\0';
+
+  return result;
+
+
+}
+
+
+
+/*
+char* CTextConverter::CTextConverter::ConvertFromUTF16ToKOI8R(const UTF16TEXT * utf16Text)
+{
+  std::string koi8rText;
+
+  for (int i = 0; utf16Text[i] != 0; ++i)
+     {
+      auto it = unicode_to_koi8r.find(utf16Text[i]);
+
+      if (it != unicode_to_koi8r.end())
+          {
+            koi8rText.push_back(it->second);
+          } else {
+            // Обработка случая, когда символ Unicode не найден в таблице
+            koi8rText.push_back('?');
+        }
     }
 
-    char* koi8rText = new char[len + 1]; // Учитываем нулевой символ
-    char* q = koi8rText;
-    while (*utf16Text) {
-        UTF16TEXT uc = *utf16Text++;
-        char c = 0;
-        for (size_t i = 0; i < sizeof(utf16_to_koi8r) / sizeof(utf16_to_koi8r[0]); ++i) {
-            if (utf16_to_koi8r[i] == uc) {
-                c = static_cast<char>(i);
-                break;
-            }
-        }
-        *q++ = c;
-    }
-    *q = '\0';
-    return koi8rText;
+    char *result = new char[koi8rText.length() + 1];
+
+  std::strncpy (result, koi8rText.c_str(), koi8rText.size());
+
+
+    return result;
 }
+*/
+
+
+
 
 
 //NOT NEEDED
@@ -764,6 +937,7 @@ QStringList CTextConverter::get_charsets()
   result.append ("UTF-16");
   result.append ("CP-1251");
   result.append ("CP-866");
+  result.append ("KOI8-R");
 
   return result;
 }
