@@ -21,8 +21,9 @@ public:
   static UTF16TEXT* ConvertFromDOS866ToUTF16 (const char* dos866Text); //ok
 
 static char* ConvertFromUTF16ToDOS866(const UTF16TEXT* utf16Text);
-static UTF16TEXT* ConvertFromKOI8RToUTF16(const char* koi8rText);
-static char* ConvertFromUTF16ToKOI8R(const UTF16TEXT* utf16Text);
+static UTF16TEXT* ConvertFromKOI8RToUTF16(const char* koi8rText); //ok
+static char* ConvertFromUTF16ToKOI8R(const UTF16TEXT* utf16Text); //ok
+
 static UTF16TEXT* ConvertFromUTF8ToUTF16(const char* utf8Text);
 
 static QStringList get_charsets();
